--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,12 @@
 .DS_Store
 node_modules/
-dist/
-lib/
-npm-debug.log
-yarn-error.log
-.npmignore
-.editorconfig
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
 
 # Editor directories and files
 .idea
+.vscode
 *.suo
 *.ntvs*
 *.njsproj
