--- a/package.json
+++ b/package.json
@@ -20,10 +20,10 @@
     "vuedraggable": "^2.16.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.0.0-beta.55",
-    "@babel/plugin-transform-runtime": "^7.0.0-beta.55",
-    "@babel/preset-env": "^7.0.0-beta.55",
-    "@babel/runtime": "^7.0.0-beta.55",
+    "@babel/core": "^7.0.0",
+    "@babel/plugin-transform-runtime": "^7.0.0",
+    "@babel/preset-env": "^7.0.0",
+    "@babel/runtime": "^7.0.0",
     "autoprefixer": "^9.0.1",
     "babel-loader": "^8.0.0-beta.4",
     "bootstrap": "^4.1.2",
