--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "build:browser": "webpack --env.prod --env.browser --progress --hide-modules"
   },
   "dependencies": {
+    "bp-vuejs-dropdown": "^2.1.1",
     "thenby": "^1.3.0",
     "vue": "^2.5.11",
     "vuedraggable": "^2.23.0"
