--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@marketconnect/vue-pivot-table",
   "description": "A vue component for pivot table",
   "private": false,
-  "version": "0.2.1",
+  "version": "0.3.0",
   "author": "MarketConnect",
   "license": "MIT",
   "repository": {
@@ -29,12 +29,14 @@
     "babel-loader": "^8.0.6",
     "bootstrap": "^4.3.1",
     "css-loader": "^0.28.7",
+    "flag-icon-css": "^3.4.6",
     "friendly-errors-webpack-plugin": "^1.7.0",
     "html-webpack-plugin": "^3.2.0",
     "javascript-natural-sort": "^0.7.1",
     "node-sass": "^4.12.0",
     "postcss-loader": "^2.1.6",
     "sass-loader": "^7.3.1",
+    "svg-url-loader": "^4.0.0",
     "thenby": "^1.3.0",
     "vue-loader": "^15.7.1",
     "vue-template-compiler": "^2.6.10",
