--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "friendly-errors-webpack-plugin": "^1.7.0",
     "html-webpack-plugin": "^3.2.0",
     "javascript-natural-sort": "^0.7.1",
+    "lodash": "^4.17.15",
     "node-sass": "^4.12.0",
     "postcss-loader": "^2.1.6",
     "sass-loader": "^7.3.1",
