--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,18 @@
 .DS_Store
-node_modules/
+node_modules
+/dist
+/library-dist
+/plugin-dist
+
+# local env files
+.env.local
+.env.*.local
+
+# Log files
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+pnpm-debug.log*
 
 # Editor directories and files
 .idea
@@ -11,3 +21,4 @@ yarn-error.log*
 *.ntvs*
 *.njsproj
 *.sln
+*.sw?
