--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "build-lib:library": "vue-cli-service build --target lib --name vuePivotTable --filename vue-pivot-table src/library-entry.js --dest library-dist/",
     "build-lib:plugin": "vue-cli-service build --target lib --name vuePivotTable --filename vue-pivot-table src/library-plugin.js --dest plugin-dist/",
     "lint": "vue-cli-service lint",
-    "eslint:github-action": "eslint --output-file eslint_report.json --format json src --ext .js,.vue"
+    "eslint:github-action": "eslint --output-file eslint_report.json --format json src --ext .js,.vue",
+    "prepublishOnly": "npm run build-lib"
   },
   "dependencies": {
     "core-js": "^3.6.5",
