--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@click2buy/vue-pivot-table",
   "description": "A vue component for pivot table",
   "private": false,
-  "version": "1.1.2",
+  "version": "1.1.3",
   "author": "Click2Buy",
   "license": "MIT",
   "repository": {
@@ -38,7 +38,7 @@
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
     "javascript-natural-sort": "^0.7.1",
-    "lodash": "^4.17.21",
+    "lodash-es": "^4.17.21",
     "sass": "^1.26.5",
     "sass-loader": "^8.0.2",
     "thenby": "^1.3.4",
