--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@click2buy/vue-pivot-table",
   "description": "A vue component for pivot table",
   "private": false,
-  "version": "1.1.3",
+  "version": "1.1.4",
   "author": "Click2Buy",
   "license": "MIT",
   "repository": {
@@ -22,7 +22,8 @@
     "build-lib:library": "vue-cli-service build --target lib --name vuePivotTable --filename vue-pivot-table src/library-entry.js --dest library-dist/",
     "build-lib:plugin": "vue-cli-service build --target lib --name vuePivotTable --filename vue-pivot-table src/library-plugin.js --dest plugin-dist/",
     "lint": "vue-cli-service lint",
-    "eslint:github-action": "eslint --output-file eslint_report.json --format json src --ext .js,.vue"
+    "eslint:github-action": "eslint --output-file eslint_report.json --format json src --ext .js,.vue",
+    "prepublishOnly": "npm run build-lib"
   },
   "dependencies": {
     "core-js": "^3.6.5",
