--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "eslint-plugin-vue": "^6.2.2",
     "javascript-natural-sort": "^0.7.1",
     "lodash-es": "^4.17.21",
+    "many-keys-map": "^1.0.3",
     "sass": "^1.26.5",
     "sass-loader": "^8.0.2",
     "thenby": "^1.3.4",
